--- a/templates/base.html
+++ b/templates/base.html
@@ -21,16 +21,16 @@
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
     </ul>
-    <!-- <ul class="navbar-nav">
+    <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" href="/tags">Tags</a></li>
-    </ul> -->
+    </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="btn btn-sm btn-secondary" href="/users/new">Add user</a>
       </li>
-      <!-- <li class="nav-item ml-2">
+      <li class="nav-item ml-2">
         <a class="btn btn-sm btn-secondary" href="/tags/new">Add tag</a>
-      </li> -->
+      </li>
     </ul>
   </nav>
   <main id="content">
@@ -43,8 +43,5 @@
   </main>
 
   <!-- <script src="/static/app.js"></script> -->
-  <!-- <script>
-    let game = new BoggleGame("boggle", 60);
-  </script> -->
 </body>
 </html>
