--- a/templates/userPostForm.html
+++ b/templates/userPostForm.html
@@ -21,12 +21,20 @@
     </div>
   </div>
 
-  <!-- {%for tag in tags %}
-  <div>
-    <input type="checkbox" id="tag_name" name="tag_name"/>
-    <label for="tag_name">{{tag.name}}</label>
+  <div class="form-check">
+    {% for tag in tags %}
+    <div>
+      <input class="form-check-input"
+             type="checkbox"
+             value="{{ tag.id }}"
+             id="tag_{{ tag.id }}"
+             name="tags">
+      <label class="form-check-label" for="tag_{{ tag.id }}">
+        {{ tag.name }}
+      </label>
+    </div>
+    {% endfor %}
   </div>
-{%endfor%} -->
     
   <div class="form-group row">
     <div class="ml-auto mr-3">
